@@ -1,5 +1,7 @@
 Version 0.14.0 (2022-01-06)
 - Switch some HM-LC-Bl1 to cover
+- Use decorators on central methods
+- Make decorators async aware
 
 Version 0.13.3 (2022-01-05)
 - HM cover fix: check level for None
